docs/api/qiskit/0.33/qiskit.transpiler.passes.GateDirection.mdx
---
title: GateDirection (v0.33)
description: API reference for qiskit.transpiler.passes.GateDirection in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.GateDirection
---

# GateDirection

<Class id="qiskit.transpiler.passes.GateDirection" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/utils/gate_direction.py" signature="GateDirection(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.TransformationPass`

  Modify asymmetric gates to match the hardware coupling direction.

  This pass makes use of the following identities:

  ```python
                       ┌───┐┌───┐┌───┐
  q_0: ──■──      q_0: ┤ H ├┤ X ├┤ H ├
       ┌─┴─┐  =        ├───┤└─┬─┘├───┤
  q_1: ┤ X ├      q_1: ┤ H ├──■──┤ H ├
       └───┘           └───┘     └───┘

       ┌──────┐          ┌───────────┐┌──────┐┌───┐
  q_0: ┤0     ├     q_0: ┤ RY(-pi/2) ├┤1     ├┤ H ├
       │  ECR │  =       └┬──────────┤│  ECR │├───┤
  q_1: ┤1     ├     q_1: ─┤ RY(pi/2) ├┤0     ├┤ H ├
       └──────┘           └──────────┘└──────┘└───┘

       ┌──────┐          ┌───┐┌──────┐┌───┐
  q_0: ┤0     ├     q_0: ┤ H ├┤1     ├┤ H ├
       │  RZX │  =       ├───┤│  RZX │├───┤
  q_1: ┤1     ├     q_1: ┤ H ├┤0     ├┤ H ├
       └──────┘          └───┘└──────┘└───┘
  ```

  GateDirection pass.

  **Parameters**

  *   **coupling\_map** ([*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) – Directed graph represented a coupling map.
  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – The backend target to use for this pass. If this is specified it will be used instead of the coupling map

  ## Methods

  <span id="qiskit-transpiler-passes-gatedirection-name" />

  ### name

  <Function id="qiskit.transpiler.passes.GateDirection.name" signature="GateDirection.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-gatedirection-run" />

  ### run

  <Function id="qiskit.transpiler.passes.GateDirection.run" signature="GateDirection.run(dag)">
    Run the GateDirection pass on dag.

    Flips the cx nodes to match the directed coupling map. Modifies the input dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to map.

    **Returns**

    The rearranged dag for the coupling map

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – If the circuit cannot be mapped just by flipping the cx nodes.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.GateDirection.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.GateDirection.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

